# OpenAutoNote

./: .gitignore  README.md  app.py  main.py  package-lock.json  package.json  requirements.txt  requirements_cuda.txt  requirements_mac.txt  requirements_wincpu.txt  test_volcano_api.py
.github/workflows/: release.yml
core/: downloader.py  i18n.py  storage.py  transcriber.py  utils.py  visual_processor.py
python-core/: app.py  install.py  main.py  requirements_mac.txt  requirements_win_cpu.txt  requirements_win_cuda.txt  setup_mac.sh
python-core/core/: downloader.py  i18n.py  model_manager.py  prompts.py  storage.py  torch_manager.py  transcriber.py  utils.py
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
